--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "predeploy": "npm run build",
+    "predeploy": "rm -rf node_modules/.cache/gh-pages && npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -28,11 +28,11 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "gh-pages": "^6.3.0",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4",
-    "gh-pages": "^6.3.0"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
